--- a/fra5.css
+++ b/fra5.css
@@ -1,5 +1,5 @@
 :root {
-    --background: rgba(85, 214, 170, .85);
+    --background: rgb(78, 122, 178);
 }
 
 * {
@@ -29,7 +29,7 @@ nav {
     top: 100%;
     left: 0;
     width: 100%;
-    background: var(--background);
+    background: rgb(78, 122, 178);;
     /* display: none; */
     transform: scale(1,0);
     transform-origin: top;
@@ -119,25 +119,37 @@ section {
     height: 100vh;
 }
 
-section.sec1 img {
+/* section.sec1 img {
     width: 100%; 
     height: 500px;
     object-fit: cover;
     display: block;
     
-}
+} */
 section.sec1 {
     position: relative;
     overflow: hidden;
-    /* background: url(img/francesco_top.jpg); */
-    /* background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover; */
-    /* width: 100%; */
-    height: 500px;
-    /* object-fit: cover; */
-    /* display: block; */
+    background: url(img/francesco_top.jpg);
+    background-attachment: fixed;
+    /* background-repeat: no-repeat; */
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100vh;
+    background-color:#8499B4;
+    background-blend-mode: luminosity;
+    
+    
 }
+
+/* .overlay {
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: .7;
+    
+   
+} */
 
 section.sec1::before {
     content: "";
@@ -185,7 +197,6 @@ section.sec3::before {
 
 section.sec2 {
     height: auto;
-    padding: 100px;
     box-sizing: border-box;
 
 }
@@ -195,7 +206,7 @@ section.sec2 p {
     padding: 10px;
     font-family: sans-serif;
     color: #262626;
-    font-size: 18px;
+    font-size: 16px;
 
 }
 
@@ -256,5 +267,20 @@ section.sec2 p {
         transform: scale(1,1);
     }
 
+     section.sec2 {
+        margin: 2em;
+        height: auto;
+        padding: 100px;
+        box-sizing: border-box;
     
+    } 
+    
+    section.sec2 p {
+        margin: 10px;;
+        padding: 10px;
+        font-family: sans-serif;
+        color: #262626;
+        font-size: 18px;
+    
+    } 
 }
