--- a/fra5.css
+++ b/fra5.css
@@ -181,6 +181,11 @@ section.sec3 {
     position: relative;
     overflow: hidden;
     background: url(img/main3_hd.jpg);
+    background-position: center top;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    
 }
 
 section.sec3::before {
