--- a/fra5.css
+++ b/fra5.css
@@ -5,7 +5,6 @@
 * {
     margin: 0;
     padding: 0;
-    
 }
 
 
@@ -122,13 +121,6 @@ section {
     height: 100vh;
 }
 
-/* section.sec1 img {
-    width: 100%; 
-    height: 500px;
-    object-fit: cover;
-    display: block;
-    
-} */
 section.sec1 {
     position: relative;
     overflow: hidden;
@@ -141,8 +133,6 @@ section.sec1 {
     height: 100vh;
     background-color:#8499B4;
     background-blend-mode: luminosity;
-    
-    
 }
 
 
@@ -156,7 +146,6 @@ section.sec1::before {
     background: #fff;
     transform-origin: right;
     transform: skewY(8deg);
-    
 }
 
 section.sec1::after {
@@ -168,19 +157,17 @@ section.sec1::after {
     height: 100%;
     background: #fff;
     transform-origin: left;
-    transform: skewY(-8deg);
-    
+    transform: skewY(-8deg); 
 }
 
 section.sec3 {
     position: relative;
     overflow: hidden;
-    background: url(img/main3_hd.jpg);
-    background-position: center top;
+    background: url(img/main_large_1960wh.jpg);
+    background-position: center center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
-    
+    height: 600px; 
 }
 
 section.sec3::before {
@@ -198,7 +185,6 @@ section.sec3::before {
 section.sec2 {
     height: auto;
     box-sizing: border-box;
-
 }
 
 section.sec2 p {
@@ -218,7 +204,6 @@ footer p {
 
 .pro1 {
     width: 960px;
-    /* background: #73b2c6; */
     height: 500px;
     margin: 0 auto;
     position: relative;
@@ -241,7 +226,6 @@ footer p {
 
 .pro2 {
     width: 960px;
-    /* background: #73b2c6; */
     height: 500px;
     margin: 0 auto;
     position: relative;
@@ -275,7 +259,6 @@ footer p {
     header {
         display: grid;
         grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
-
     }
 
     .logo {
@@ -292,7 +275,6 @@ footer p {
 
     nav ul {
         display: flex;
-        
     }
 
     nav li {
@@ -336,13 +318,23 @@ footer p {
         font-family: sans-serif;
         color: #262626;
         font-size: 18px;
-    
     } 
 }
 
 
+/* media query for the footer image */
 
-
+@media screen and (min-width: 320px){
+    section.sec3 {
+        position: relative;
+        overflow: hidden;
+        background: url(img/main_large_800w.jpg);
+        background-position: center center;
+        background-size: cover;
+        width: 100%;
+        height: 300px;
+    }
+}
 
 
 
