--- a/fra5.css
+++ b/fra5.css
@@ -319,12 +319,13 @@ footer p {
         color: #262626;
         font-size: 18px;
     } 
+    
 }
 
 
 /* media query for the footer image */
 
-@media screen and (min-width: 320px){
+@media screen and (max-width: 640px){
     section.sec3 {
         position: relative;
         overflow: hidden;
@@ -333,6 +334,7 @@ footer p {
         background-size: cover;
         width: 100%;
         height: 300px;
+        
     }
 }
 
@@ -340,21 +342,4 @@ footer p {
 
 
 
-/* default screen, non-retina */
-/* section.sec1  { 
-    background-image: url("img/img_scale/1290.jpg"); 
-} */
 
-/* @media only screen and (max-width: 320px) { */
-    /* Small screen, non-retina
-    .section.sec1  { 
-        background-image: url("/img/img_scale/290jpg"); 
-    }
-}
-
-@media only screen and (min-width: 321px) and (max-width: 538px) {
-    /* Medium screen, non-retina */
-    /* .section.sec1  { 
-        background-image: url("img/img_scale/583.jpg"); 
-    }
-} */ 
