--- a/fra5.css
+++ b/fra5.css
@@ -121,8 +121,9 @@ nav a:hover {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 0.5em;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     text-transform: uppercase;
+    margin-left: 25px;
 }
 
 section {
