--- a/fra5.css
+++ b/fra5.css
@@ -256,6 +256,7 @@ section.sec2 p {
     font-family: sans-serif;
     color: #262626;
     font-size: 16px;
+    line-height: 1.5em;
 }
 
 footer p {
@@ -268,6 +269,28 @@ footer p {
 
 img.project{
     width:100%;
+}
+
+h2.t-name {
+    margin: 25px;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+}
+
+h2.bjc-name {
+    margin-bottom: 1.5em;
+    margin-top: 1.5em;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+
+}
+
+.project-name {
+    text-align: center;
+    margin: 3em;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.5em;
+    text-shadow: 2px 2px 2px #CCCCCC;
 }
 
 /* start media query for the navbar */
@@ -365,16 +388,17 @@ img.project{
     .t-riot {
         display: flex;
         justify-content: center;
-        align-items: center;
+        /* align-items: center; */
         border-radius:5px;
         -webkit-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
         -moz-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
         box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+        margin-top: 6em;
     }
 
     .bjc {
        display: flex;
-       /* align-items: center; */
+       align-items: center;
       
     }
 
@@ -383,6 +407,7 @@ img.project{
         -webkit-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
         -moz-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
         box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+        margin-top: 6em;
     }
     
 }
@@ -405,6 +430,12 @@ img.project{
 
 
 /* project page */
+
+
+/* .sec2.prj{
+    line-height: 1.5em;
+    
+} */
 
 /* .t-name,
 .bjc-name {
