--- a/fra5.css
+++ b/fra5.css
@@ -108,7 +108,6 @@ nav a:hover {
 }
 
 .nav-toggle:checked ~ nav {
-    /* display: block; */
     transform: scale(1,1);
 }
 
@@ -129,9 +128,6 @@ nav a:hover {
     letter-spacing: 2px;
     text-transform: uppercase;
     margin-left: 25px;
-    /* font-family: 'Lato', sans-serif; */
-    /* font-family: 'Roboto Slab', serif; */
-    
 }
 
 section {
@@ -149,8 +145,6 @@ section.sec1 {
     background-position: center center;
     width: 100%;
     height: 100vh;
-    /* background-color:#8499B4;
-    background-blend-mode: luminosity; */
 }
 
 
@@ -203,6 +197,7 @@ section.sec3::before {
 section.sec2 {
     height: auto;
     box-sizing: border-box;
+    margin-bottom:100px;
 }
 
 .title {
@@ -251,7 +246,6 @@ section.sec2 {
   }
 
 section.sec2 p { 
-    /* margin: 10px; */
     padding: 20px;
     font-family: sans-serif;
     color: #262626;
@@ -291,6 +285,24 @@ h2.bjc-name {
     font-family: 'Raleway', sans-serif;
     font-size: 1.5em;
     text-shadow: 2px 2px 2px #CCCCCC;
+}
+
+
+.video-gallery {
+    height: auto;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;;
+    justify-items: center;
+    grid-row-gap: 70px;
+    
+}
+
+.box iframe{
+    width: 470px;
+    height: 300px;
+    display: block;
 }
 
 /* start media query for the navbar */
@@ -349,10 +361,11 @@ h2.bjc-name {
     }
 
      section.sec2 {
-        /* margin: 2em; */
+        
         height: auto;
         padding: 100px;
         box-sizing: border-box;
+
     
     } 
     
@@ -376,8 +389,8 @@ h2.bjc-name {
         width: 1240px;
         margin: 0 auto;
         padding: 20px;
-        /* line-height: 2; */
         font-size: 1em;
+        margin-bottom: 200px;
         
     } 
 
@@ -388,7 +401,6 @@ h2.bjc-name {
     .t-riot {
         display: flex;
         justify-content: center;
-        /* align-items: center; */
         border-radius:5px;
         -webkit-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
         -moz-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
@@ -398,8 +410,6 @@ h2.bjc-name {
 
     .bjc {
        display: flex;
-       /* align-items: center; */
-      
     }
 
     .info-bjc {
@@ -410,7 +420,33 @@ h2.bjc-name {
         margin-top: 6em;
     }
 
+    /* media query for the music page */
+
+    .video-gallery {
+        max-width: 990px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        grid-row-gap: 70px;
+        grid-column-gap: 50px;
+       
+    }
+
+    .project-name {
+        grid-row:1;
+        grid-column: 1/3;
+    }
     
+    .box iframe{
+        width: 470px;
+        height: 300px;
+        display: block;
+    }
+
+    
+
     
     
     
