--- a/fra5.css
+++ b/fra5.css
@@ -16,7 +16,9 @@
     box-sizing: border-box;
 }
 
-/* mobile navigation */
+/* *********************************
+        mobile navigation
+*********************************** */
 
 
 header {
@@ -35,7 +37,6 @@ nav {
     left: 0;
     width: 100%;
     background: rgb(78, 122, 178);;
-    /* display: none; */
     transform: scale(1,0);
     transform-origin: top;
     transition: transform 400ms ease-in-out;
@@ -60,7 +61,6 @@ nav a {
     opacity: 0;
     transition: opacity 150ms ease-in-out;
     font-family: 'Raleway', sans-serif;
-   
 }
 
 nav a:hover {
@@ -76,7 +76,6 @@ nav a:hover {
     top: 0;
     left: 0;
     margin-left: 1em;
-    /* border: 1px solid red; */
     height: 100%;
     display: flex;
     align-items: center;
@@ -140,7 +139,6 @@ section.sec1 {
     overflow: hidden;
     background: url(img/francesco_top.jpg);
     background-attachment: fixed;
-    /* background-repeat: no-repeat; */
     background-size: cover;
     background-position: center center;
     width: 100%;
@@ -223,17 +221,6 @@ section.sec2 {
     
 }
 
-.subtitle span:before,
-.subtitle span:after {
-  content: "";
-  position: absolute;
-  height: 5px;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
-  top: 0;
-  
-}
-
 .subtitle span:before {
     right: 100%;
     margin-right: 15px;
@@ -305,7 +292,12 @@ h2.bjc-name {
     display: block;
 }
 
-/* start media query for the navbar */
+
+
+/*******************************************
+ start media query for the navbar
+ ******************************************** */
+
 
 @media screen and (min-width: 800px) {
     .nav-toggle-label {
@@ -380,7 +372,7 @@ h2.bjc-name {
     .subtitle span:after {
         width: 200px;
   
-}
+    }
     
 }
  
@@ -420,7 +412,9 @@ h2.bjc-name {
         margin-top: 6em;
     }
 
-    /* media query for the music page */
+    /***************************************
+     media query for the music page 
+     ****************************************/
 
     .video-gallery {
         max-width: 990px;
@@ -444,11 +438,6 @@ h2.bjc-name {
         height: 300px;
         display: block;
     }
-
-    
-
-    
-    
     
 }
 
@@ -463,14 +452,120 @@ h2.bjc-name {
         height: 300px;
     }
     
-    
-
-    
 }
 
 
+/* ************************************
+              
+            contact page  
 
+***************************************/
 
+.subtle-gray-gradient { 
+    margin: 5rem auto 0 auto;
+    padding: 3rem;
+    width: 80%;
+    height: auto;
+    background: -webkit-linear-gradient(360deg, #dee1e1 10%, #f4f4f4 360%); 
+    background: -moz-linear-gradient(360deg, #dee1e1 10%, #f4f4f4 360%);
+    background: linear-gradient(360deg, #dee1e1 10%, #f4f4f4 360%);
+    box-shadow: 0px 1px 5px -2px rgba(0,0,0,1); 
+    }
 
+.booking-form {
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    padding: 2rem;
+    color: rgb(121, 118, 118);
+}
 
+.form-box {
+    padding: 0.5rem 0.5rem;
+    display: flex;
+    flex-direction: row;
+    font-family: 'Raleway', sans-serif;
+    font-size: 0.9rem;
+}
+
+.form-box label {
+    display: block;
+    flex-basis: 6rem;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.form-box button {
+    margin:0 auto;
+    width: 300px;
+    
+}
+
+.form-box input,
+.form-box textarea {
+    flex-basis: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+    background-color: #f8f8f8;
+    border-radius: 4px;
+    border: 2px solid #ccc;
+    font-family: 'Raleway', sans-serif;
+}
+
+input, label, button {
+    padding: 0.4rem 0.2rem;
+    
+}
+
+textarea {
+    height: 150px;
+    padding: 0.4rem 0.2rem;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 0.9rem;
+    resize: both;
+    font-family: 'Raleway', sans-serif;
+}
+
+/* ************************************         
+        contact page  media query
+***************************************/
+
+@media all and (max-width: 780px) {
+
+    .subtle-gray-gradient {
+        width: 95%;
+        padding: 2rem 0 2rem 0;
+    }
+    /* .form-box{
+        flex-direction: column;
+        justify-content: center;
+        
+
+    } */
+
+    .form-box label {
+        display: none;
+        
+    }
+
+    /* .form-box button {
+        margin-left: 0;
+        width:100%;
+    } */
+    /* textarea {
+        width: 100%;
+        height: 150px;
+        padding: 12px 20px;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        background-color: #f8f8f8;
+        font-size: 16px;
+        resize: vertical;
+        
+    } */
+    
+}
 
