changed some text and the contac page image

--- a/contac.css
+++ b/contac.css
@@ -1,7 +1,7 @@
 section.sec1 {
     position: relative;
     overflow: hidden;
-    background: url(img/contac-pic.JPG);
+    background: url(img/batteria.jpeg);
     background-attachment: fixed;
     background-size: cover;
     background-position: right;
