--- a/fra5.css
+++ b/fra5.css
@@ -51,6 +51,7 @@ nav ul {
 nav li {
     margin-bottom: 1em;
     margin-left:1em;
+    padding: 5px;
 }
 
 nav a {
@@ -124,7 +125,7 @@ nav a:hover {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 0.6em;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     margin-left: 30px;
 }
@@ -137,7 +138,7 @@ section {
 section.sec1 {
     position: relative;
     overflow: hidden;
-    background: url(img/francesco_top.jpg);
+    background: linear-gradient(rgb(78, 122, 178, 0.4), rgb(78, 122, 178, 0.4)), url(img/francesco_top.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -250,6 +251,7 @@ footer p {
 
 img.project{
     width:100%;
+
 }
 
 h2.t-name {
@@ -390,13 +392,19 @@ h2.bjc-name {
         font-size: 0.8em;
     }
 
+    img.project {
+        -webkit-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+        -moz-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+        box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+    }
+
     .t-riot {
         display: flex;
         justify-content: center;
         border-radius:5px;
-        -webkit-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+        /* -webkit-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
         -moz-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
-        box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+        box-shadow: 0px 1px 5px -2px rgba(0,0,0,1); */
         margin-top: 6em;
     }
 
@@ -405,10 +413,10 @@ h2.bjc-name {
     }
 
     .info-bjc {
-        border-radius:5px;
+        /* border-radius:5px;
         -webkit-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
         -moz-box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
-        box-shadow: 0px 1px 5px -2px rgba(0,0,0,1);
+        box-shadow: 0px 1px 5px -2px rgba(0,0,0,1); */
         margin-top: 6em;
     }
 
