--- a/music.css
+++ b/music.css
@@ -1,13 +1,26 @@
 
 
-section.sec1 {
+/* section.sec1 {
     position: relative;
     overflow: hidden;
-    background: url(img/main3_hd.jpg);
+    background: url(img/img2/000_2542pp.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: 60%;
     width: 100%;
+    height: 100vh;
+} */
+
+section.sec1 {
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(rgb(78, 122, 178, 0.4), rgb(78, 122, 178, 0.4)),  url(img/img2/desktop.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 15%;
+    width: 100%;
+    top: -10%;
     height: 100vh;
 }
 
@@ -15,10 +28,11 @@ section.sec1 {
     section.sec1 {
         position: relative;
         overflow: hidden;
-        background: url(img/main3_hd.jpg);
+        background: linear-gradient(rgb(78, 122, 178, 0.4), rgb(78, 122, 178, 0.4)),  url(img/img2/desktop.jpg);
         background-attachment: fixed;
         background-size: cover;
-        /* background-position: 60%; */
+        background-repeat: no-repeat;
+        background-position: center;
         width: 100%;
         top: -10%;
         height: 100vh;
