--- a/project.css
+++ b/project.css
@@ -1,10 +1,10 @@
 section.sec1 {
     position: relative;
     overflow: hidden;
-    background: url(img/project-pic.JPG);
+    background: linear-gradient(rgb(78, 122, 178, 0.4), rgb(78, 122, 178, 0.4)),  url(img/img2/finale2.jpg);
     background-attachment: fixed;
     background-size: cover;
-    background-position: 60%;
+    background-position: center 40px;
     width: 100%;
     height: 100vh;
 }
@@ -13,7 +13,7 @@ section.sec1 {
     section.sec1 {
         position: relative;
         overflow: hidden;
-        background: url(img/project-pic.JPG);
+        background: linear-gradient(rgb(78, 122, 178, 0.4), rgb(78, 122, 178, 0.4)), url(img/img2/uno.jpg);
         background-attachment: fixed;
         background-size: cover;
         /* background-position: 60%; */
