--- a/contac.css
+++ b/contac.css
@@ -13,7 +13,7 @@ section.sec1 {
     section.sec1 {
         position: relative;
         overflow: hidden;
-        background: linear-gradient(rgb(78, 122, 178, 0.4), rgb(78, 122, 178, 0.4)), url(img/batteria.jpeg);
+        background: linear-gradient(rgb(78, 122, 178, 0.4), rgb(78, 122, 178, 0.4)), url(img/img2/batteria_desktop.jpg);
         background-attachment: fixed;
         background-size: cover;
         background-position: center;
